sjengida/g2/losers_eval
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/losers_eval/src/leval.c:928:23: error: use of undeclared identifier 'unk_41B044'
v48 = ( const char *)&unk_41B044; 
                      ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/losers_eval/src/leval.c:949:23: error: use of undeclared identifier 'unk_41B044'
v40 = ( const char *)&unk_41B044; 
                      ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/losers_eval/src/leval.c:969:16: error: use of undeclared identifier 'unk_41B024'
v37 = ( int *)&unk_41B024; 
               ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/losers_eval/src/leval.c:976:7: error: use of undeclared identifier 'knight_o_1'
if ( &knight_o_1 == ( _UNKNOWN *)v37 ) 
      ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/losers_eval/src/leval.c:986:16: error: use of undeclared identifier 'unk_41B024'
v34 = ( int *)&unk_41B024; 
               ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/losers_eval/src/leval.c:993:7: error: use of undeclared identifier 'knight_o_1'
if ( &knight_o_1 == ( _UNKNOWN *)v34 ) 
      ^
6 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/losers_eval/src/obj/leval.o] Error 1
